# filnizer

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-signing-placeholder.yml
docs/: ARCHITECTURE.md  spec.md
docs/release/: checklist.md  licenses.md  portable-readme.md  signing.md  webview2.md
scripts/: package-portable.ps1
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_organizer_rules.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  converter.rs  jobs.rs  mod.rs  organizer.rs  settings.rs
src-tauri/src/converter/: image.rs  markdown.rs  media.rs  mod.rs  office.rs  pdf.rs  planner.rs  spreadsheet.rs
src-tauri/src/db/: jobs_repository.rs  mod.rs  operation_repository.rs  settings_repository.rs
src-tauri/src/domain/: conversion.rs  files.rs  jobs.rs  mod.rs  operations.rs  settings.rs
src-tauri/src/organizer/: apply.rs  categories.rs  duplicates.rs  mod.rs  planner.rs  rename.rs  rules.rs  scan.rs  undo.rs
src-tauri/src/tools/: ffmpeg.rs  libreoffice.rs  mod.rs  pdfium.rs  webview2.rs
src/app/: App.tsx
src/features/converter/: ConverterView.tsx
src/features/jobs/: JobsView.tsx
src/features/organizer/: OrganizerView.tsx
src/features/settings/: SettingsView.tsx
src/lib/: tauri-client.ts
tasks/: plan.md  todo.md
