[package]
name = "filnizer"
version = "0.1.0"
description = "Offline file organizer and converter"
authors = ["Filnizer Contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.88"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
