[package]
name = "filnizer"
version = "0.1.0"
description = "Offline file organizer and converter"
authors = ["abdtirtayasa24"]
edition = "2021"
license = "MIT"
rust-version = "1.88"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
calamine = "0.35.0"
csv = "1.4.0"
image = "0.25.10"
markdown2pdf = { version = "1.5.0", default-features = false }
notify = "8.2.0"
pdfium-render = "0.9.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rust_xlsxwriter = "0.95.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "fs", "sync", "time"] }
trash = "5.2.6"
uuid = { version = "1.23.4", features = ["v7", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
